# project-v4noznti

./: .gitignore  README.md  __init__.py  cli.py  contact_commands.py  data.pkl  main.py  note_commands.py  pyproject.toml  requirements.txt  run_tests.py  storage.py  test_cli.py  test_contact_commands.py  test_note_commands.py
address_book/: __init__.py  book.py
address_book/error/: exceptions.py
address_book/record/: record.py
books/: __init__.py
books/address_book/: __init__.py  book.py
books/address_book/error/: __init__.py  exceptions.py
books/address_book/record/: __init__.py  record.py
books/commons/: __init__.py  exceptions.py  field.py
books/note_book/: __init__.py  book.py
books/note_book/error/: __init__.py  exceptions.py
cli/: __init__.py  cli.py  command_suggestions.py  contact_commands.py  guess_command.py  note_commands.py
cli/guess_command/: __init__.py  guess_command.py  possible_commands.py
guess_command/: __init__.py  guess_command.py
note_book/: __init__.py  book.py
note_book/error/: __init__.py  exceptions.py
note_book/note/: __init__.py  note.py
tests/: __init__.py  conftest.py  run_tests.py  test_address_book.py  test_cli.py  test_command_suggestions.py  test_contact_commands.py  test_guess_command.py  test_interactive_suggestions.py  test_note_book.py  test_note_commands.py
tests/test_address_book/: __init__.py  test_book.py  test_record.py  test_record_fields.py
tests/test_commons/: __init__.py  test_exceptions.py  test_field.py
tests/test_note_book/: __init__.py  test_book.py  test_note.py
(+10 files in other folders)
